# python_automation_09-22

./: 2022-09-17 15:51:24.905021.txt  README.md  pyproject.toml
additional/: README.md
additional/lesson_01/: README.md  main.py
additional/lesson_01/ariphmetical_operations/: human.py
additional/lesson_01/context_manager_and_iterator/: context_manager_example.py
additional/lesson_01/generator/: comprehensions.py  functions.py
additional/lesson_01/getting_attributes/: human.py  main.py
additional/lesson_01/manager/: context_manager_example.py  main.py
additional/lesson_01/parking/: car.py  main.py  parking.py
additional/lesson_02/: README.md
lesson_23/: README.md
lesson_23/binary_example/: main.py  read_write_bytes_to_file_using_bytes_constructor.py  read_write_bytes_to_file_with_pickle.py
lesson_23/csv_reader/: gender.py  main.py  read_csv.py  user.py
lesson_23/part_read_write_example/: append_operation.py  read_fragment.py  some_text.txt
lesson_23/text_example/: data.txt  main.py  results.txt  write_read_text.py
lesson_24/: README.md  queries.sql  store_to_db.drawio
lesson_25/: README.md  main.drawio  main.py  unpacking.py  unpacking_example.py
lesson_25/psycopg_example/: main.py  simple_example.py
lesson_25/psycopg_example/connection/: config.py  connection.py  cursor.py
lesson_25/pyodbc_example/: main.py
lesson_26/: README.md  main.py  products_registry.py
lesson_26/models/: product.py
lesson_27/: main.py
lesson_27/models/: __init__.py  profile.py  user.py
lesson_27/sqlalchemy_example/: create_db_schemas.py  main.py
(+15 files in other folders)
