[tool.poetry]
name = "python_automation"
version = "0.1.0"
description = ""
authors = ["Nikita Limarchuk"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
