[tool.poetry]
name = "python_automation"
version = "0.1.0"
description = ""
authors = ["Nikita Limarchuk"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.971"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
