[tool.poetry]
name = "python_automation"
version = "0.1.0"
description = ""
authors = ["Nikita Limarchuk"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.971"
black = "^22.8.0"
pyodbc = "^4.0.34"
psycopg = "^3.1.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
